<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <TextView
        android:id="@+id/tvDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/details"
        android:textSize="34sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCommon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:singleLine="true"
        android:text="@string/common"
        android:textColor="#EF3838"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle" />

    <TextView
        android:id="@+id/tvBotanical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:text="@string/botanical"
        android:textColor="#EF3838"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvCommon"
        app:layout_constraintTop_toBottomOf="@+id/tvCommon" />

    <TextView
        android:id="@+id/tvZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:text="@string/zone"
        android:textColor="#EF3838"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvBotanical"
        app:layout_constraintTop_toBottomOf="@+id/tvBotanical" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:text="@string/light"
        android:textColor="#EF3838"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvZone"
        app:layout_constraintTop_toBottomOf="@+id/tvZone" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:text="@string/price"
        android:textColor="#EF3838"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvLight"
        app:layout_constraintTop_toBottomOf="@+id/tvLight" />

    <TextView
        android:id="@+id/tvAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:text="@string/availability"
        android:textColor="#EF3838"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />
</androidx.constraintlayout.widget.ConstraintLayout>